syntax = "proto3";
package otsimo;
option go_package = "mchatpb";

message QuestionResult{
    string id = 1;
    string answer = 2;
}

message SubStepResult{
    string id = 1;
    int64 startDate = 2;
    int64 endDate = 3;
	repeated QuestionResult stepResults = 4;
}

message StepResult{
    string id = 1;
    repeated SubStepResult subStepResults = 2;
}
enum SurveyType{
    MCHAT = 0;
    MCHATRF = 1;
}

message Result{
	Info info = 1;
	DeviceInfo device = 2;
	int64 duration = 3;
	repeated StepResult stepResults = 4;
    int32 version = 5;
    SurveyType surveyType = 6;

}

message DeviceInfo{
    string vendorId = 1;
    string bundleIdentifier = 3;
    string bundleVersion = 4;
    string bundleShortVersion = 5;
    string deviceType = 6;
    string deviceName = 7;
    string osName = 8;
    string systemVersion = 9;
    string languageCode = 10;
    string countryCode = 11;
    string ip = 12;
}

message Info{
    int64 birthDay = 1;
    string gender = 2;
    string relation = 3;
}

message UserInfo{
    string userID = 1;
    string email = 2;
}
